new endpoints for competition get
